# mineral_prospect

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
data/interim/copper/: X_test.parquet  X_test_rf.parquet  X_test_small.parquet  X_train.parquet  X_train_bal.parquet  X_train_rf.parquet  X_train_small.parquet  y_test.parquet  y_test_cat.parquet  y_train.parquet  y_train_bal.parquet  y_train_cat.parquet
data/interim/copper/X_train_bal/: X_0.parquet  X_1.parquet  X_10.parquet  X_100.parquet  X_101.parquet  X_102.parquet  X_103.parquet  X_104.parquet  X_105.parquet  X_106.parquet  X_107.parquet  X_108.parquet  X_109.parquet  X_11.parquet  X_110.parquet  X_111.parquet  X_112.parquet  X_113.parquet  X_114.parquet  X_115.parquet  X_116.parquet  X_117.parquet  X_118.parquet  X_119.parquet  X_12.parquet  X_120.parquet  X_121.parquet  X_122.parquet  X_123.parquet  X_124.parquet  X_125.parquet  X_126.parquet  X_127.parquet  X_128.parquet  X_129.parquet  X_13.parquet  X_130.parquet  X_131.parquet  X_132.parquet  X_133.parquet  (+959 more)
data/interim/copper/X_train_small/: X_train_small_0.parquet  X_train_small_1.parquet  X_train_small_2.parquet  X_train_small_3.parquet  X_train_small_4.parquet  X_train_small_5.parquet  X_train_small_6.parquet  X_train_small_7.parquet  (+2 more)
data/processed/copper/: copper_data.parquet  optuna_results_random_forest_raw_train.parquet  test_data.parquet  train_data.parquet
data/raw/: Ag.xls  Cu.xls  Cu_v2.xls  Zn.xls
docs/: mkdocs.yml
docs/data_docs/: RESUMO.docx
docs/docs/: index.md
notebooks/: ian-eda-copper.ipynb
(+1046 files in other folders)
