[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mineral_prospect"
version = "0.0.1"
description = "The purpose of this project is to research and develop an ore mine prospector to evaluate the profitability of an ore mine being explored. This prospection solution takes incomplete descriptions of the ore mines being explored to estimate their profitability based on complete data about profitable and already explored mines."
authors = [
  { name = "Aline Gassenn, Bruna Lucena, Emerson Rocha, Ian Lucas, Paulo Henrique, Rosilanny Carvalho" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mineral_prospect"]
force_sort_within_sections = true
